<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="#60ffffff"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameLbl"
                style="@style/inputLbl"
                android:text="@string/card_name"/>

            <EditText
                android:id="@+id/nameEdt"
                style="@style/inputEdt"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardTypeLbl"
                style="@style/inputLbl"
                android:text="@string/card_type"/>

            <Spinner
                android:id="@+id/cardTypeSpn"
                style="@style/inputEdt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/playerClassLbl"
                style="@style/inputLbl"
                android:text="@string/player_class"/>

            <Spinner
                android:id="@+id/playerClassSpn"
                style="@style/inputEdt"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardSetLbl"
                style="@style/inputLbl"
                android:text="@string/card_set"/>

            <Spinner
                android:id="@+id/cardSetSpn"
                style="@style/inputEdt"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rarityLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardRarityLbl"
                style="@style/inputLbl"
                android:text="@string/card_rarity"/>

            <Spinner
                android:id="@+id/cardRaritySpn"
                style="@style/inputEdt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/isGoldLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/isGoldLbl"
                    style="@style/inputLbl"
                    android:text="@string/is_gold"/>

                <Switch
                    android:id="@+id/isGoldSwh"
                    style="@style/inputEdt"
                    android:layout_width="50dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/costLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/costLbl"
                    style="@style/inputLbl"
                    android:layout_width="39dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/mana"/>

                <EditText
                    android:id="@+id/costEdt"
                    style="@style/inputEdt"
                    android:layout_width="55dp"
                    android:inputType="number"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/descLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/descEdt"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/card_desc_hint"
                android:inputType="textMultiLine"
                android:lines="4"/>

            <Button
                android:id="@+id/boldDescBtn"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:height="25dp"
                android:background="#20ffffff"
                android:text="@string/to_bold"
                android:textSize="20sp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/healthLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/healthLbl"
                    style="@style/inputLbl"
                    android:src="@mipmap/health"/>

                <EditText
                    android:id="@+id/healthEdt"
                    style="@style/inputEdt"
                    android:layout_width="55dp"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attackLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/attackLbl"
                    style="@style/inputLbl"
                    android:src="@mipmap/atack"/>

                <EditText
                    android:id="@+id/attackEdt"
                    style="@style/inputEdt"
                    android:layout_width="55dp"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/raceLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/raceLbl"
                style="@style/inputLbl"
                android:text="@string/race"/>

            <EditText
                android:id="@+id/raceEdt"
                style="@style/inputEdt"
                android:inputType="text"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/resetBtn"
            style="@style/inputBottomBtn"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/normal_btn"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/takePhotoBtn"
            style="@style/inputBottomBtn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/normal_btn"
            android:text="@string/take_photo"/>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
