<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/rootDrawerLyt"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/main_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/openInputFragBtn"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/set_btn"/>

            <Button
                android:id="@+id/calModelBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:background="@drawable/normal_btn"
                android:paddingTop="3dp"
                android:text="@string/calc_model"/>

            <Button
                android:id="@+id/openOptionBtn"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/set_btn"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/cardViewParentLyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        </LinearLayout>


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="104dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="42dp"
            android:background="@drawable/normal_btn"
            android:paddingTop="3dp"
            android:text="@string/save_card"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/shareBtn"
            android:layout_width="104dp"
            android:layout_height="43dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/normal_btn"
            android:paddingTop="3dp"
            android:text="@string/share_card"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/saveBtn"/>


    </android.support.constraint.ConstraintLayout>

    <fragment
        android:id="@+id/infoInputFrag"
        class="cn.jk.hscardfactory.main.InfoInputFragment"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        >

    </fragment>


    <fragment
        class="cn.jk.hscardfactory.main.OptionFragment"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        tools:layout="@layout/fragment_option">

    </fragment>

</android.support.v4.widget.DrawerLayout>